<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/eletric_car"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:text="@string/carros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        />

    <TextView
        android:id="@+id/tv_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/favoritos"
        app:layout_constraintStart_toEndOf="@id/tv_carros"
        app:layout_constraintTop_toTopOf="@id/tv_carros"
        android:layout_marginLeft="16dp"
        />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eletric_car"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/tv_carros"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/pre_o"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"

        />

    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 300.000,00"
        app:layout_constraintStart_toEndOf="@id/tv_preco"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"
        android:layout_marginLeft="16dp"

        />

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/bateria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"

        />

    <TextView
        android:id="@+id/tv_bateria_autonomia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300 kWh"
        app:layout_constraintStart_toEndOf="@id/tv_bateria"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"
        android:layout_marginLeft="16dp"

        />

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/p_tencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"

        />

    <TextView
        android:id="@+id/tv_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300 cv"
        app:layout_constraintStart_toEndOf="@id/tv_potencia"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"
        android:layout_marginLeft="16dp"

        />

    <TextView
        android:id="@+id/tv_recarda"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/recarga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"

        />

    <TextView
        android:id="@+id/tv_recarda_tempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23 min"
        app:layout_constraintStart_toEndOf="@id/tv_recarda"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"
        android:layout_marginLeft="16dp"

        />

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="16dp"
        android:hint="@string/preco_kwh"
        android:inputType="numberDecimal"
        android:maxLength="100"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recarda_tempo" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="4dp"
        android:hint="@string/km_percorrido"
        android:inputType="numberDecimal"
        android:maxLength="100"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="@+id/et_preco_kwh"
        app:layout_constraintStart_toStartOf="@+id/et_preco_kwh"
        app:layout_constraintTop_toBottomOf="@+id/et_preco_kwh"
        />


    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calcular"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/btn_calcular"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular"
    />


</androidx.constraintlayout.widget.ConstraintLayout>
